--- a/src/scss/GlobalStyle.scss
+++ b/src/scss/GlobalStyle.scss
@@ -96,7 +96,16 @@ h3 {
   width: 30px;
   margin-bottom: 4px;
   margin-left: 4px;
+  margin-top: 8px;
 }
 .claimDateInputField {
   width: 100%;
 }
+.fileNameEstimate{
+  background-color: #ffffff;
+  padding: 1rem;
+  border-radius: 10px;
+  margin-bottom: 4px;
+  border: #000 1px solid;
+}
+
