--- a/src/scss/GlobalStyle.scss
+++ b/src/scss/GlobalStyle.scss
@@ -93,7 +93,10 @@ h3 {
   text-decoration: none;
 }
 .btnFile {
-  width: 30px;
+  
+  padding: 8px;
+  width: 100px;
+  background-color: teal;
   margin-bottom: 4px;
   margin-left: 4px;
   margin-top: 8px;
