--- a/src/scss/GlobalStyle.scss
+++ b/src/scss/GlobalStyle.scss
@@ -109,6 +109,7 @@ h3 {
   font-weight: 700;
   cursor: pointer;
   user-select: none;
+  text-decoration :none;
 }
 .download:active {
   background-color: #7acb7a54;
