--- a/src/scss/GlobalStyle.scss
+++ b/src/scss/GlobalStyle.scss
@@ -89,8 +89,15 @@ h3 {
   }
 }
 .downloadpicture {
-  color: #fff !important;
+  color: rgb(212, 28, 28) !important;
   text-decoration: none;
+  background-color: #7acb7a;
+  width: 60px !important;
+  height: 39px;
+  border-radius: 2px;
+  margin-left: 5px;
+  padding-top: 7px;
+  padding-left: 15px;
 }
 .btnFile {
   width: 30px;
